[gd_scene load_steps=5 format=3 uid="uid://bubsr3aloat8j"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_1ixdp"]
[ext_resource type="Texture2D" uid="uid://d3nuc7t7btsrf" path="res://assets/shot.png" id="2_aregl"]
[ext_resource type="PackedScene" uid="uid://clgyg2d057pdf" path="res://nodes/death_particles.tscn" id="3_p4md3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ip7lk"]
size = Vector2(15.6928, 42)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_1ixdp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.153614, -21.3051)
scale = Vector2(3, 3.5)
texture = ExtResource("2_aregl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.153614, -21.3051)
shape = SubResource("RectangleShape2D_ip7lk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.05879e-22, 11)
scale = Vector2(0.484639, 0.109627)

[node name="DeathParticles" parent="." instance=ExtResource("3_p4md3")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
